# deduction

./: CMakeLists.txt  readme.markdown
cli/: CMakeLists.txt
cli/deduction.xcodeproj/: project.pbxproj
cli/deduction.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cli/deduction.xcodeproj/xcuserdata/ghansard.xcuserdatad/xcschemes/: deduction.xcscheme  xcschememanagement.plist
cli/src/: main.cpp
datatypes/: CMakeLists.txt
datatypes-json/: CMakeLists.txt
datatypes-json/include/deduction/json/: alias.hpp  enumeration.hpp  function.hpp  metadata.hpp  parse-result.hpp  structure.hpp  variable.hpp
datatypes-json/src/: alias.cpp  enumeration.cpp  function.cpp  parse-result.cpp  structure.cpp  variable.cpp
datatypes/include/deduction/datatypes/: alias.hpp  enumeration.hpp  function.hpp  language.hpp  parse-result.hpp  structure.hpp  variable.hpp
deduction/: main.cpp
deduction.xcodeproj/: project.pbxproj
deduction.xcodeproj/xcuserdata/ghansard.xcuserdatad/xcschemes/: xcschememanagement.plist
deduction.xcworkspace/: contents.xcworkspacedata
deductionjson/deductionjson/: alias.cpp  deductionjson.cpp  deductionjson.hpp  enumeration.cpp  enumeration.hpp  function.cpp  function.hpp  json_conversion_options.cpp  json_conversion_options.hpp  structure.cpp  variable.cpp  variable.hpp
deductionjson/deductionjson.xcodeproj/: project.pbxproj
deductionjson/deductionjson.xcodeproj/xcuserdata/ghansard.xcuserdatad/xcschemes/: deductionjson.xcscheme  xcschememanagement.plist
json/: CMakeLists.txt
json/include/: json_conversion_options.hpp
json/include/deduction/: deductionjson.hpp  json_conversion_options.hpp
json/src/: alias.hpp  deductionjson.cpp  metadata.cpp  structure.cpp  structure.hpp
scripts/: build_libclang.sh
tests/: CMakeLists.txt
tests/cases/: enum-class.hpp  function-pointer.hpp  namespaced-struct.hpp  struct.hpp  variables.hpp
tests/src/: class-tests.cpp  enum_tests.cpp  function-pointer-tests.cpp  function-tests.cpp  struct-json-test.cpp  struct-tests.cpp  variables-json-test.cpp  variables-tests.cpp  versioninfo.cpp
tests/tests/: class-tests.cpp  enum_tests.cpp  function-pointer-tests.cpp  function-tests.cpp  main.cpp  struct-json-test.cpp  struct-tests.cpp  variables-json-test.cpp  variables-tests.cpp  versioninfo.cpp
tests/tests.xcodeproj/: project.pbxproj
tests/tests.xcodeproj/xcuserdata/ghansard.xcuserdatad/xcschemes/: tests.xcscheme  xcschememanagement.plist
tests/tests/cases/: class.hpp  enum.hpp  function.hpp  struct.hpp
